cmake_minimum_required(VERSION 3.23)
project(AED_Proj1)

set(CMAKE_CXX_STANDARD 14)

add_executable(AED_Proj1 main.cpp Classes/UCTurma.cpp Classes/UCTurma.h Classes/Slot.cpp Classes/Slot.h Classes/Pedido.cpp Classes/Pedido.h Classes/GestaoHor.cpp Classes/GestaoHor.h Classes/Student.cpp Classes/Student.h)
